[gd_scene format=3 uid="uid://d28qkjtrgdrbs"]

[ext_resource type="Script" uid="uid://dnajaupwv5qmy" path="res://Scenes/win_screen.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cbxajc26jcuq1" path="res://Fonts/Burbank Big Condensed Black.otf" id="2_awi1s"]
[ext_resource type="FontFile" uid="uid://b2eehe7wokx72" path="res://Fonts/Lost Tumbler.ttf" id="3_bwc64"]

[sub_resource type="SystemFont" id="SystemFont_85imr"]

[node name="WinScreen" type="Control" unique_id=1747548582]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="." unique_id=49816679]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="." unique_id=387698769]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -321.0
offset_right = 571.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel" unique_id=227982440]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.5
offset_top = -70.5
offset_right = 206.5
offset_bottom = 229.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer" unique_id=2012933307]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8, 0, 1)
theme_override_fonts/font = ExtResource("2_awi1s")
theme_override_font_sizes/font_size = 64
text = "LEVEL COMPLETE!"
horizontal_alignment = 1

[node name="Level2Button" type="Button" parent="Panel/VBoxContainer" unique_id=978253711]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_85imr")
theme_override_font_sizes/font_size = 32
text = "Level 2"

[node name="RetryButton" type="Button" parent="Panel/VBoxContainer" unique_id=1765913309]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_85imr")
theme_override_font_sizes/font_size = 32
text = "Retry"

[node name="MenuButton" type="Button" parent="Panel/VBoxContainer" unique_id=1727775841]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_85imr")
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[node name="Stars" type="HBoxContainer" parent="Panel" unique_id=101027265]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.5
offset_top = -227.5
offset_right = 149.5
offset_bottom = -116.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Star1" type="Label" parent="Panel/Stars" unique_id=942750672]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bwc64")
theme_override_font_sizes/font_size = 80
text = "★"

[node name="Star2" type="Label" parent="Panel/Stars" unique_id=1017813173]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_awi1s")
theme_override_font_sizes/font_size = 80
text = "★"

[node name="Star3" type="Label" parent="Panel/Stars" unique_id=148677130]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "★"

[connection signal="pressed" from="Panel/VBoxContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
